# taskchampion-sync-server

./: .dockerignore  .env  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-postgres  Dockerfile-sqlite  README.md  RELEASING.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  entrypoint-postgres.sh  entrypoint-sqlite.sh  index.yaml  integration.html  introduction.html  print.html  searchindex.js  toc.html  toc.js  usage.html
.github/: dependabot.yml
.github/workflows/: add-to-project.yml  build.yml  checks.yml  docker.yml  helm-test.yml  helm.yml  publish-docs.yml  publish-helm.yml  rust-tests.yml  security.yml
core/: Cargo.toml  README.md
core/src/: error.rs  inmemory.rs  lib.rs  server.rs  storage.rs
docs/: book.toml
docs/src/: SUMMARY.md  integration.md  introduction.md  usage.md
docs/src/integration/: crates.md  pre-built.md  protocol-impl.md
docs/src/usage/: binaries.md  change-notifications.md  docker-compose.md  docker-images.md  helm.md
helm-chart/: index.yaml  taskchampion-sync-server-0.1.0.tgz
helm-charts/: index.yaml
helm/taskchampion-sync-server/: .helmignore  Chart.yaml  README.md  values.yaml
helm/taskchampion-sync-server/examples/: postgres-values.yaml  sqlite-values.yaml
helm/taskchampion-sync-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  httproute.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  validation-config.yaml
helm/taskchampion-sync-server/templates/secrets/: postgres-secret.yaml
integration/: crates.html  pre-built.html  protocol-impl.html
postgres/: Cargo.toml  README.md  schema.sql
postgres/src/: lib.rs  testing.rs
repro/: run-postgres-bug-repro.sh
server/: Cargo.toml
server/src/: args.rs  lib.rs  server.rs  web.rs
server/src/api/: add_snapshot.rs  add_version.rs  events.rs  get_child_version.rs  get_snapshot.rs  mod.rs
sqlite/: Cargo.toml  README.md
sqlite/src/: lib.rs
sqlite/tests/: concurrency.rs
src/: lib.rs  server.rs
src/api/: add_snapshot.rs  add_version.rs  get_child_version.rs  get_snapshot.rs
src/storage/: inmemory.rs  sqlite.rs
usage/: binaries.html  docker-compose.html  docker-images.html
