[package]
name = "taskchampion-sync-server"
version = "0.4.1"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2021"
publish = false

[dependencies]
uuid = { version = "^1.10.0", features = ["serde", "v4"] }
actix-web = "^4.9.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "^0.3.25"
serde_json = "^1.0"
serde = { version = "^1.0.147", features = ["derive"] }
clap = { version = "^4.5.6", features = ["string"] }
log = "^0.4.17"
env_logger = "^0.11.5"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "^0.4.22", features = ["serde"] }

[dev-dependencies]
actix-rt = "2"
tempfile = "3"
pretty_assertions = "1"
