[package]
name = "taskchampion-sync-server-storage-postgres"
version = "0.7.1"
authors = ["Dustin J. Mitchell <dustin@v.igoro.us>"]
edition = "2021"
description = "Postgres backend for TaskChampion-sync-server"
homepage = "https://github.com/GothenburgBitFactory/taskchampion"
repository = "https://github.com/GothenburgBitFactory/taskchampion-sync-server"
license = "MIT"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bb8-postgres.workspace = true
bb8.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
taskchampion-sync-server-core = { path = "../core", version = "0.7.1" }
thiserror.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
uuid.workspace = true
openssl.workspace = true
native-tls.workspace = true
postgres-native-tls.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
