[package]
name = "taskchampion-sync-server"
version = "0.7.1-pre"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2021"
publish = false

[features]
# By default, only build the SQLite backend.
default = ["sqlite"]
sqlite = ["dep:taskchampion-sync-server-storage-sqlite"]
postgres = ["dep:taskchampion-sync-server-storage-postgres"]

[[bin]]
# The simple binary name is the SQLite build.
name = "taskchampion-sync-server"
required-features = ["sqlite"]

[[bin]]
name = "taskchampion-sync-server-postgres"
required-features = ["postgres"]

[dependencies]
taskchampion-sync-server-core = { path = "../core" }
taskchampion-sync-server-storage-sqlite = { path = "../sqlite", optional = true }
taskchampion-sync-server-storage-postgres = { path = "../postgres", optional = true }
uuid.workspace = true
actix-web.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
serde_json.workspace = true
serde.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true

[dev-dependencies]
actix-rt.workspace = true
tempfile.workspace = true
pretty_assertions.workspace = true
temp-env.workspace = true
