[package]
name = "taskchampion-sync-server-storage-sqlite"
version = "0.6.1-pre"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2021"
description = "SQLite backend for TaskChampion-sync-server"
license = "MIT"

[dependencies]
taskchampion-sync-server-core = { path = "../core", version = "0.6.1-pre" }
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
