[package]
name = "taskchampion-sync-server-storage-sqlite"
version = "0.7.1-pre"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2021"
description = "SQLite backend for TaskChampion-sync-server"
homepage = "https://github.com/GothenburgBitFactory/taskchampion"
repository = "https://github.com/GothenburgBitFactory/taskchampion-sync-server"
license = "MIT"

[dependencies]
taskchampion-sync-server-core = { path = "../core", version = "0.7.1-pre" }
async-trait.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
tokio.workspace = true
